labels can be added properly to a node

--- a/app/templates/visualization/edit-window.hbs
+++ b/app/templates/visualization/edit-window.hbs
@@ -20,13 +20,12 @@
   <div class="labels-section">
     <h5 class="label-title">Labels<button {{action "newLabel"}} class="button confirm"> {{fa-icon "plus"}}{{bs-tooltip title="Create New Label"}}</button></h5>
     <div class="label-list">
-      {{#each model.labels as |label|}}
+      {{#each model.labels as |existingLabel|}}
         <div class='label'>
-          {{!-- colored circle component should go here --}}
           <label for="name" class='badge badge-pill' style='background:{{model.color}}'>
-            {{bs-tooltip title=label}}
-            {{label}}
-            {{#bs-button class='badge badge-pill badge-outline remove-label-button' onClick=(action 'removeLabel' label)}}
+            {{bs-tooltip title=existingLabel}}
+            {{existingLabel}}
+            {{#bs-button class='badge badge-pill badge-outline remove-label-button' onClick=(action 'removeLabel' existingLabel)}}
               {{fa-icon 'times'}}
             {{/bs-button}}
           </label>
@@ -34,7 +33,8 @@
       {{/each}}
 
       <div class="row label-selection">
-        {{#each (without model.labels labelChoices) as |label|}}
+        {{!-- {{#each (without model.labels labelChoices) as |label|}} --}}
+        {{#each labelChoices as |label|}}
           <div class="col-6">
             <button {{action "selectLabel" label}} class="label-selector">
               {{label}}
@@ -192,3 +192,15 @@
       </div>
     </div>
 {{/if}}
+
+
+{{!-- Name --}}
+{{!-- Close --}}
+
+{{!-- Form/Changeset --}}
+  {{!-- Labels --}}
+  {{!-- Properties --}}
+{{!-- /Form --}}
+
+{{!-- List of connected properties --}}
+{{!-- List of connected labels --}}
