working d3 network graph using example data

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,401 +1,2 @@
-@import "ember-bootstrap/bootstrap";
-@import "ember-basic-dropdown";
-@import "ember-power-select";
-
-//Main
-body {
-  .main {
-    padding-top:50px;
-    .ember-cli-visjs-network .network-canvas {
-      height: 85vh;
-    }
-  }
-}
-
-.main {
-  background-color: #fff;
-}
-
-// User Guide
-
-.guide-navigation {
-  background-color: #aaa;
-  border-radius: 50px;
-  border: none;
-
-  &:hover {
-    background-color: #d8d8d8;
-  }
-}
-
-// application route
-.header {
-  user-select: none;
-  position: fixed;
-  z-index: 1;
-  background-color: white;
-  width: 100%;
-  
-  a {
-    text-decoration: none;
-    color: black;
-  }
-  
-  .graphing-tool-badge {
-    user-select: none;
-    opacity: 0.75;
-    font-size: 45%;
-  }
-}
-
-// Vis parent toolbar
-.node-canvas-toolbar {
-  background-color: #dfdfdf;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-  border-bottom-right-radius: 5px;
-  border-bottom-left-radius: 5px;
-  margin-bottom: 1px;
-}
-
-.button-group {
-  margin: 0 15px;
-  padding: 2px;
-}
-
-// Default buttons
-.button {
-  background-color: #f1f1f1;
-  border-radius: 100%;
-  border: none;
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
-}
-
-.confirm {
-  color: #28a745;
-  background-color: #f1f1f1;
-  border: 1px solid #28a745;
-  
-  &:hover {
-    background-color: #28a74610;
-  }
-}
-
-.cancel {
-  color: #dc3545;
-  background-color: #f1f1f1;
-  border: 0.3px solid #dc3545;
-  
-  &:hover {
-    background-color: #dc354510;
-  }
-}
-
-.warning {
-  color: red;
-  font-weight: 550;
-}
-
-// Node Edit
-
-.node-header {
-  margin: 0px -10px;
-  padding: 5px 20px;
-  position: relative;
-  top: -37px;
-  width: 100%;
-  border-radius: 30px;
-  background-color: lightgrey;
-  
-  .button {
-    position: relative;
-    top: -3px;
-  }
-  .node-name {
-    padding: 0 5px;
-    font-weight: 600;
-    font-size: 26px;
-    width: 80%;
-  }
-
-  .name-input {
-    margin: 0 5px;
-    padding: 2px 0;
-    position: relative;
-    right: 10px;
-    width: 100%;
-    top: 4px;
-    font-weight: 600;
-    border-radius: 10px;
-    border: 1px solid #6d6d6d;
-  }
-}
-.labels-section {
-  margin:  10px -10px;
-  padding: 5px;
-  background: lightgrey;
-  border-radius: 25px;
-  
-  .remove-label-button {
-    width: 15px;
-    background: transparent;
-    border: none;
-    color: black;
-
-    &:hover {
-      background: #575757;
-    }
-  }
-
-  .label-title {
-    padding: 5px 20px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    background-color: #efefef;
-    font-size: 22px;
-  }
-
-  .label-list {
-    background: #efefef;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    padding: 5px 15px;
-    font-size: 1rem;
-    
-    .badge-pill {
-      margin: 0.5px 0 !important;
-    }
-    
-    .label-selection {
-      margin-top: 2px;
-      border-top: 1px solid #575757;
-      max-height: 500px;
-      overflow-y: auto;
-      
-      
-      .label-selector {
-        border: none;
-        background-color: #aaa;
-        border-radius: 25px;
-        margin: 0.5px;
-        cursor: pointer;
-
-        &:hover {
-          background-color: #cecece;
-        }
-      }
-
-      .new {
-        width: 50px;
-        background-color: #28a745;
-
-        &:hover {
-          background-color: #1f7c35;
-        }
-      }
-
-    }
-  }
-}
-
-// Node Properties
-.properties {
-  margin: 10px -10px;
-  padding: 5px;
-  background: lightgrey;
-  border-radius: 25px;
-
-  .property-title {
-    padding: 5px 20px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    background-color: #efefef;
-    font-size: 22px;
-  }
-  .property-list {
-    position: relative;
-    background: #efefef;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    padding: 15px;
-    font-size: 1rem;
-    
-    .property {
-      padding: 2px;
-    }
-  }
-}
-
-// Connected Properties
-.connected {
-  margin: 10px -10px;
-  padding: 5px;
-  background: lightgrey;
-  border-radius: 25px;
-
-  .title {
-    padding: 5px 20px;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    background-color: #efefef;
-    font-size: 22px;
-  }
-
-  .list-outline {
-    position: relative;
-    background: #efefef;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-    padding: 15px;
-    
-    .property {
-      border-radius: 15px;
-      padding: 1px;
-      cursor: pointer;
-      font-size: 15px;
-      
-      .item {
-        text-align: inherit;
-        padding: 0 10px;
-        display: inline;
-      }
-
-      .reveal-connections {
-        color: rgba(0,0,0,0.65);
-        background-color: transparent;
-        border: none;
-        border-radius: 50px;
-        cursor: pointer;
-
-        &:hover {
-          background-color: #cecece;
-        }
-      }
-
-      &:hover {
-        background-color: #e2e2e2;
-      }
-    }
-  }
-}
-
-// Toolbar search
-.breadcrumbs {
-  background-color: #AAAAAA;
-  border-radius: 15px;
-  padding: 3px;
-  margin: 5px;
-  
-  .search-query {
-    padding: 2px;
-    margin: 2px;
-  }
-}
-
-.info-text {
-  color: rgb(59, 59, 59);
-}
-
-.searching {
-  margin: 3px 5px;
-  
-  .search-choice {
-    padding: 2px 0;
-    margin: 1px 12px;
-    border-top: 1px solid #aaaaaa;
-
-    .search-param {
-      border: none;
-      border-radius: 15px;
-      margin: 1px -1px;
-      cursor: pointer;
-  
-      &:hover {
-        background-color: #ababab;
-      }
-    }
-  }
-
-  .search-form {
-    border-top: 1px solid #aaaaaa;
-    margin: 1px -1px;
-    padding: 2px 0;
-
-    .search-bar {
-    }
-
-    .search-button {
-      background-color: green;
-      margin: 1px 5px;
-    }
-  }
-}
-
-//Account-dropdown
-.account-dropdown {
-  position: fixed;
-  z-index: 2;
-  top: 5px;
-  right: 5px;
-  user-select: none;
-}
-
-.account-dropdown-list {
-  list-style: none;
-}
-
-// Welcome Page
-.card-info {
-  min-width: 12rem;
-  max-width: 50rem;
-}
-
-// Canvas Wormhole
-#destination {
-  position:absolute;right:25px;top:5px;
-}
-
-// Modal
-.modal-button {
-  border: none;
-  border-radius: 50px;
-  background-color: #dfdfdf;
-
-  &:hover {
-    background-color: #afafaf;
-  }
-}
-
-// Bootstrap defaults
-.trigger-bootstrap-feel {
-  display: inline-block;
-  text-align: center;
-  vertical-align: middle;
-  cursor: pointer;
-  border: 1px solid #ccc;
-  padding: 6px 12px;
-  line-height: 1.42857143;
-  border-radius: 4px;
-  color: #333;
-  background-color: #fff;
-  outline: none;
-}
-
-.trigger-bootstrap-feel:focus, .trigger-bootstrap-feel:hover {
-  background-color: #d4d4d4;
-  border-color: #8c8c8c;
-}
-
-.content-bootstrap-feel {
-  background-color: #fff;
-  border: 1px solid rgba(0,0,0,.15);
-  border-radius: 4px;
-  box-shadow: 0 6px 12px rgba(0,0,0,.175);
-  padding: 5px;
-  margin: 2px 0 0;
-}
-// Ember-power-select defaults
-$ember-power-select-border-color: #64A5ED;
-$ember-power-select-border-radius: 0;
+@import "pod-styles";
+@import 'ember-paper';
