--- a/app/templates/components/vis-parent.hbs
+++ b/app/templates/components/vis-parent.hbs
@@ -86,4 +86,4 @@
 
 
 
-{{node-canvas bubbles=false model=model edgeDelete=edgeDelete toggleEditMode=(action "toggleEditMode") editingEdges=editingEdges}}
+{{visualization/node-canvas bubbles=false model=model edgeDelete=edgeDelete toggleEditMode=(action "toggleEditMode") editingEdges=editingEdges}}
