--- a/app/templates/components/visualization/canvas-frame.hbs
+++ b/app/templates/components/visualization/canvas-frame.hbs
@@ -1,8 +1,10 @@
 <div class="layout-row flex">
   <div class="flex-gt-sm-70 flex-50">
     {{visualization/canvas-toolbar}}
+    {{nodes.length}}
     {{visualization/canvas-surface
-      items=items
+      nodes=nodes
+      clickedNode=(action "clickedNode")
     }}
   </div>
   <div class="flex-gt-sm-30 flex-50">
