--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,1 +1,7 @@
-{{outlet}}
+<ApplicationHeader class="header"/>
+
+<div class="layout-row">
+  <div class="flex-100">
+    {{outlet}}
+  </div>
+</div>
