--- a/app/templates/components/visualization/canvas-surface.hbs
+++ b/app/templates/components/visualization/canvas-surface.hbs
@@ -1,5 +1,5 @@
 {{!-- {{items.length}} --}}
-<svg id="graph" height="900" width="100%" style="border:1px solid black;">
+<svg id="graph">
   <g class="links"></g>
   <g class="nodes"></g>
 </svg>
