--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,2 +1,14 @@
 @import "pod-styles";
 @import 'ember-paper';
+
+.toolbar {
+  position: absolute;
+  margin: 0;
+  padding: 0;
+}
+
+#graph {
+  width: 100%;
+  height: 90vh;
+  border: 1px solid black;
+}
