--- a/app/templates/visualization.hbs
+++ b/app/templates/visualization.hbs
@@ -1,3 +1,8 @@
 {{visualization/canvas-frame
-  items=graphCache.items
+  items=model
+  start=start
+  loaded=loaded
+  label=label
+  property=property
+  searchTerm=searchTerm
 }}
