--- a/app/templates/components/visualization/canvas-frame.hbs
+++ b/app/templates/components/visualization/canvas-frame.hbs
@@ -1,7 +1,11 @@
 <div class="layout-row layout-wrap">
   <div class="flex-sm-100 flex-50">
     <div class="toolbar">
-      {{visualization/canvas-toolbar}}
+      {{visualization/canvas-toolbar
+        label=label
+        property=property
+        searchTerm=searchTerm
+      }}
     </div>
     {{visualization/canvas-surface
       nodes=nodes
@@ -16,3 +20,6 @@
     {{/if}}
   </div>
 </div>
+
+{{log 'canvas frame' items}}
+{{log 'canvas frame' nodes}}
