working query params for simple search

--- a/app/templates/components/visualization/canvas-frame.hbs
+++ b/app/templates/components/visualization/canvas-frame.hbs
@@ -8,7 +8,7 @@
       }}
     </div>
     {{visualization/canvas-surface
-      nodes=nodes
+      nodes=groupedNodes
       clickedNode=(action "clickedNode")
     }}
   </div>
@@ -20,6 +20,3 @@
     {{/if}}
   </div>
 </div>
-
-{{log 'canvas frame' items}}
-{{log 'canvas frame' nodes}}
