--- a/app/templates/components/visualization/canvas-frame.hbs
+++ b/app/templates/components/visualization/canvas-frame.hbs
@@ -10,6 +10,8 @@
     {{visualization/canvas-surface
       nodes=groupedNodes
       clickedNode=(action "clickedNode")
+      doubleClickedNode=(action "doubleClickedNode")
+      hoveringOverNode=(action "hoveringOverNode")
     }}
   </div>
   <div class="flex-sm-100 flex-50">
