--- a/app/templates/components/visualization/canvas-toolbar.hbs
+++ b/app/templates/components/visualization/canvas-toolbar.hbs
@@ -21,7 +21,7 @@
     {{/actions.action}}
 
     {{#actions.action}}
-      {{#paper-button mini=true raised=true onClick=(action (mut model) [])}}
+      {{#paper-button mini=true raised=true onClick=(action (mut loaded) [])}}
         {{paper-icon "undo"}}
       {{/paper-button}}
     {{/actions.action}}
