--- a/app/templates/components/visualization/canvas-surface.hbs
+++ b/app/templates/components/visualization/canvas-surface.hbs
@@ -1,7 +1,6 @@
-{{!-- {{items.length}} --}}
-<svg id="graph">
+
   <g class="links"></g>
   <g class="nodes"></g>
-</svg>
 
-{{!-- {{data}} --}}
+
+{{drawNodes}}
