--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,5 @@
-<ApplicationHeader class="header"/>
+<ApplicationHeader class="header" />
 
-<div class="layout-row">
-  <div class="flex-100">
-    {{outlet}}
-  </div>
+<div class="container">
+  {{outlet}}
 </div>
