--- a/app/templates/components/visualization/canvas-toolbar.hbs
+++ b/app/templates/components/visualization/canvas-toolbar.hbs
@@ -1,4 +1,4 @@
-{{#paper-speed-dial
+{{!-- {{#paper-speed-dial
   onMouseEnter=(action (mut open) true) onMouseLeave=(action (mut open) false)
   open=open onToggle=(action (mut open)) hoverFull=hoverFull as |dial|}}
   {{#dial.trigger}}
@@ -45,4 +45,4 @@
     {{/paper-dialog-content}}
 
   {{/paper-dialog}}
-{{/if}}
+{{/if}} --}}
