--- a/app/templates/components/visualization/tool-tip.hbs
+++ b/app/templates/components/visualization/tool-tip.hbs
@@ -18,7 +18,7 @@
   Edit each node's properties.
 </li>
 
-{{#paper-list}}
+{{!-- {{#paper-list}}
   {{#paper-subheader}}Tips{{/paper-subheader}}
     {{#paper-item class="md-3-line"}}
     <h3>Creating nodes</h3>
@@ -36,4 +36,4 @@
     <h3>How to find your nodes</h3>
     <p></p>
     {{/paper-item}}
-{{/paper-list}}
+{{/paper-list}} --}}
