--- a/app/templates/components/application-header.hbs
+++ b/app/templates/components/application-header.hbs
@@ -1,10 +1,16 @@
-<PaperToolbar>
-  <PaperToolbarTools>
-    <PaperButton>
-      <h2>
-        Graph9
-      </h2>
-    </PaperButton>
-    <span class="flex"></span>
-  </PaperToolbarTools>
-</PaperToolbar>
+{{#bs-navbar type="light" backgroundColor="light" collapsed=collapsed onCollapse=(action (mut collapsed) true) onExpand=(action (mut collapsed) false) as |navbar|}}
+  <div class="navbar-header">
+    {{navbar.toggle}}
+    <a class="navbar-brand" href="#">Graph9</a>
+  </div>
+  {{#navbar.content}}
+    {{#navbar.nav as |nav|}}
+      {{#nav.item}}
+        {{#nav.link-to "login"}}Home{{/nav.link-to}}
+      {{/nav.item}}
+      {{#nav.item}}
+        {{#nav.link-to "login"}}Navbars{{/nav.link-to}}
+      {{/nav.item}}
+    {{/navbar.nav}}
+  {{/navbar.content}}
+{{/bs-navbar}}
