graph component displays data and loads new nodes

--- a/app/templates/components/visualization/canvas-frame.hbs
+++ b/app/templates/components/visualization/canvas-frame.hbs
@@ -1,27 +1,37 @@
 {{!-- <div class="layout-row layout-wrap"> --}}
   {{!-- <div class="flex-sm-100 flex-70"> --}}
     <div class="toolbar">
-      {{visualization/canvas-toolbar
-        label=label
-        property=property
-        searchTerm=searchTerm
-        loaded=loaded
-      }}
+      <Visualization::canvasToolbar
+        @label={{this.label}}
+        @property={{this.property}}
+        @searchTerm={{this.searchTerm}}
+        @loaded={{this.loaded}}
+      />
     </div>
-    {{visualization/canvas-surface
-      nodes=items
-      clickedNode=(action "clickedNode")
-      doubleClickedNode=(action "doubleClickedNode")
-      hoveringOverNode=(action "hoveringOverNode")
-    }}
+    {{!-- <Visualization::canvasSurface
+      @nodes={{this.items}}
+      @clickedNode={{action "clickedNode"}}
+      @doubleClickedNode={{action "doubleClickedNode"}}
+      @hoveringOverNode={{action "hoveringOverNode"}}
+    /> --}}
+    <Visualization::graph
+      @interactive=true
+      @nodes={{this.items}}
+      @clickedNode={{action "clickedNode"}}
+      @doubleClickedNode={{action "doubleClickedNode"}}
+    />
   {{!-- </div> --}}
   {{!-- <div class="flex-sm-100 flex-30"> --}}
     {{#if currentlySelectedNode}}
-      {{node-main node=currentlySelectedNode}}
+      <nodeMain
+        @node={{this.currentlySelectedNode}}
+      />
     {{else}}
-      {{visualization/tool-tip}}
+      <Visualization::toolTip/>
     {{/if}}
   {{!-- </div> --}}
 {{!-- </div> --}}
 
-{{node/node-hover node=nodeBeingHoveredOver}}
+<Node::nodeHover
+  @node={{this.nodeBeingHoveredOver}}
+/>
