--- a/app/templates/visualization.hbs
+++ b/app/templates/visualization.hbs
@@ -1,7 +1,7 @@
-{{visualization/canvas-frame
-  items=model
-  loaded=loaded
-  label=label
-  property=property
-  searchTerm=searchTerm
-}}
+<Visualization::canvasFrame
+  @items={{this.model}}
+  @loaded={{this.loaded}}
+  @label={{this.label}}
+  @property={{this.property}}
+  @searchTerm={{this.searchTerm}}
+/>
