--- a/app/templates/components/visualization/toolbar/query-builder.hbs
+++ b/app/templates/components/visualization/toolbar/query-builder.hbs
@@ -1,43 +1,10 @@
-{{!-- {{#paper-form model=data onSubmit=(action "search" data) as |form|}}
-  <div class="layout-row"> --}}
-    Query Builder
-
-    {{!-- <div class="flex-50"> --}}
-      {{!-- {{#paper-select
-        label="Choose a label"
-        options=labels
-        selected=selectedLabel
-        required=true
-        onChange=(action (mut selectedLabel))
-        as |label|}}
-        {{label}}
-      {{/paper-select}} --}}
-    {{!-- </div> --}}
-
-    {{!-- <div class="flex-50"> --}}
-      {{!-- {{#paper-select
-        label="Choose a property to get started"
-        options=properties
-        selected=selectedProperty
-        required=true
-        onChange=(action (mut selectedProperty))
-        as |property|}}
-        {{property}}
-      {{/paper-select}} --}}
-    {{!-- </div> --}}
-
-  {{!-- <div class="layout-row"> --}}
-    {{!-- {{form.input
-      label="Search Term"
-      value=userSearchTerm
-      onChange=(action (mut userSearchTerm))
-      required=true
-      }} --}}
-  {{!-- </div> --}}
-  {{!-- </div> --}}
-
-
-  {{!-- <div class="layout-row">
-    {{#form.submit-button raised=true primary=true disabled=form.isInvalid}}Search{{/form.submit-button}}
-  </div>
-{{/paper-form}} --}}
+<BsForm @formLayout="horizontal" @model={{this}} @onSubmit={{action "search"}} as |form|>
+  {{#form.element controlType="power-select" property="selectedLabel" label="Choose" options=labels as |el|}}
+    {{el.control searchPlaceholder="Type your name"}}
+  {{/form.element}}
+  {{#form.element controlType="power-select" property="selectedProperty" label="Choose" options=properties as |el|}}
+    {{el.control searchPlaceholder="Type your name"}}
+  {{/form.element}}
+  <form.element @controlType="text" @property="userSearchTerm" />
+  <BsButton @defaultText="Submit" @type="primary" @buttonType="submit" />
+</BsForm>
