--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -10,12 +10,14 @@
   padding: 0;
 }
 
-#graph {
-  width: 100%;
-  height: 90vh;
-  border: 1px solid black;
-}
-
 @import "ember-power-select/themes/bootstrap";
 
 @import "ember-power-select";
+
+.frame {
+  height: calc(100vh);
+}
+
+.container, .row {
+  height: 100%;
+}
