--- a/app/templates/components/header.hbs
+++ b/app/templates/components/header.hbs
@@ -1,4 +1,4 @@
-{{#bs-navbar type="light" backgroundColor="light" collapsed=collapsed onCollapse=(action (mut collapsed) true) onExpand=(action (mut collapsed) false) as |navbar|}}
+{{#bs-navbar type="light" fluid=true backgroundColor="light" collapsed=collapsed onCollapse=(action (mut collapsed) true) onExpand=(action (mut collapsed) false) as |navbar|}}
   <div class="navbar-header">
     {{navbar.toggle}}
     <a class="navbar-brand" href="#">Graph9</a>
@@ -6,11 +6,11 @@
   {{#navbar.content}}
     {{#navbar.nav as |nav|}}
       {{#nav.item}}
-        {{#nav.link-to "login"}}Home{{/nav.link-to}}
+        {{#nav.link-to "login"}}Login{{/nav.link-to}}
       {{/nav.item}}
-      {{#nav.item}}
+      {{!-- {{#nav.item}}
         {{#nav.link-to "login"}}Navbars{{/nav.link-to}}
-      {{/nav.item}}
+      {{/nav.item}} --}}
     {{/navbar.nav}}
   {{/navbar.content}}
 {{/bs-navbar}}
