--- a/app/templates/components/visualization/canvas-frame.hbs
+++ b/app/templates/components/visualization/canvas-frame.hbs
@@ -1,28 +1,18 @@
-<Visualization::canvasToolbar @label={{this.label}} @property={{this.property}} @searchTerm={{this.searchTerm}} @loaded={{this.loaded}} />
-<div class="container">
-  <div class="row">
-    <div class="col-6">
-      <Visualization::graph
-        @interactive=true
-        @nodes={{this.items}}
-        @clickedNode={{action "clickedNode"}}
-        @doubleClickedNode={{action "doubleClickedNode"}}
-        @hoveringOverNode={{action "hoveringOverNode"}}
-        bubbles=false
-      />
+<Visualization::Toolbar @label={{this.label}} @property={{this.property}} @searchTerm={{this.searchTerm}} @loaded={{this.loaded}} @clearCanvas={{clearCanvas}}/>
 
-      <Node::nodeHover @node={{this.nodeBeingHoveredOver}} />
+<div class="row">
+  <div class="col-8">
+    {{!-- <button {{on "click" (action clearCanvas)}}>Clear</button> --}}
 
-    </div>
-    <div class="col-6">
-      {{#if currentlySelectedNode}}
-        {{!-- <nodeMain @node={{currentlySelectedNode}} /> --}}
-        {{nodeMain node=currentlySelectedNode}}
-        {{!-- {{else}}
-  <Visualization::toolTip /> --}}
-      {{/if}}
+    <Visualization::graph @interactive=true @nodes={{this.nodes}} @links={{this.links}} @clickedNode={{action "clickedNode"}} @doubleClickedNode={{action "doubleClickedNode"}} @hoveringOverNode={{action "hoveringOverNode"}} bubbles=false />
 
-    </div>
+    <Node::nodeHover @node={{this.nodeBeingHoveredOver}} />
+
   </div>
+  <div class="col-4">
+    {{#if currentlySelectedNode}}
+      {{nodeMain node=currentlySelectedNode}}
+    {{/if}}
 
+  </div>
 </div>
