--- a/app/templates/visualization.hbs
+++ b/app/templates/visualization.hbs
@@ -4,4 +4,5 @@
   @label={{this.label}}
   @property={{this.property}}
   @searchTerm={{this.searchTerm}}
+  @clearCanvas={{action "clearCanvas"}}
 />
