--- a/app/templates/components/visualization/frame.hbs
+++ b/app/templates/components/visualization/frame.hbs
@@ -11,7 +11,7 @@
   </div>
   <div class="col-4">
     {{#if currentlySelectedNode}}
-      {{nodeMain node=currentlySelectedNode}}
+    <Node::Base @node={{currentlySelectedNode}}/>
     {{/if}}
 
   </div>
