--- a/app/templates/visualization.hbs
+++ b/app/templates/visualization.hbs
@@ -1,8 +1,8 @@
 <Visualization::Frame
   @items={{this.model}}
   @loaded={{this.loaded}}
-  @label={{this.label}}
-  @property={{this.property}}
-  @searchTerm={{this.searchTerm}}
+  @labels={{this.labels}}
+  @properties={{this.properties}}
+  @searchTerms={{this.searchTerms}}
   @clearCanvas={{action "clearCanvas"}}
 />
