--- a/app/templates/components/visualization/graph.hbs
+++ b/app/templates/components/visualization/graph.hbs
@@ -1,2 +1,1 @@
-<svg height="100%" width="100%"> </svg>
-{{!-- {{graph}} --}}
+<svg height="100%" width="100%" style="border: 1px solid black;"> </svg>
