--- a/app/templates/components/visualization/toolbar.hbs
+++ b/app/templates/components/visualization/toolbar.hbs
@@ -3,3 +3,4 @@
 {{/if}}
 <button {{on "click" (action (mut isSearching) (not isSearching))}}>Search</button>
 <button {{on "click" (action this.clearCanvas)}}>Clear</button>
+<button {{on "click" (action this.undo)}}>Undo</button>
