--- a/app/templates/visualization.hbs
+++ b/app/templates/visualization.hbs
@@ -5,4 +5,5 @@
   @properties={{this.properties}}
   @searchTerms={{this.searchTerms}}
   @clearCanvas={{action "clearCanvas"}}
+  @undoLoad={{action "undoLoad"}}
 />
