--- a/app/templates/visualization.hbs
+++ b/app/templates/visualization.hbs
@@ -4,6 +4,7 @@
   @labels={{this.labels}}
   @properties={{this.properties}}
   @searchTerms={{this.searchTerms}}
+  @loadedIds={{this.loadedIds}}
   @clearCanvas={{action "clearCanvas"}}
   @undoLoad={{action "undoLoad"}}
 />
