--- a/app/templates/components/node/form.hbs
+++ b/app/templates/components/node/form.hbs
@@ -1,28 +1,31 @@
-<BsForm @formLayout="vertical" @onSubmit={{action save}} as |form|>
+<BsForm @formLayout="horizontal" as |form|>
 
   <Node::LabelList as |allLabels|>
-    <PowerSelectMultiple @searchEnabled={{true}} @options={{allLabels}} @selected={{selectedLabels}} @placeholder="Select labels" @onchange={{action (mut selectedLabels)}} @disabled={{if isEditing false true}} as |label|>
+    <PowerSelectMultiple @searchEnabled={{true}} @options={{allLabels}} @selected={{selectedLabels}} @placeholder="Select labels" @onchange={{action (mut selectedLabels)}} as |label|>
       {{label}}
     </PowerSelectMultiple>
   </Node::LabelList>
 
-  {{#each-in node.properties as |key property|}}
-    {{#if property}}
-      {{!-- <form.element @value={{key}} @controlType="text" @autofocus={{true}} @placeholder="Property Name" @disabled={{if isEditing false true}} @onChange={{action "changePropertyKey" key}} /> --}}
-      <form.element @value={{key}} @controlType="text" @autofocus={{true}} @placeholder="Property Name" @disabled={{if isEditing false true}} @onChange={{fn (action "changePropertyKey" key)}} />
-      <form.element @value={{property}} @controlType="text" @autofocus={{true}} @placeholder="Property Value" @disabled={{if isEditing false true}} @onChange={{action "changePropertyValue" property key}} />
-    {{/if}}
+  {{#each-in properties as |key property|}}
+    <form.element @value={{key}} @controlType="text" @autofocus={{true}} @placeholder="Property Name" @onChange={{fn (action "changePropertyKey" key)}} />
+    <form.element @value={{property}} @controlType="text" @placeholder="Property Value" @onChange={{action "changePropertyValue" property key}} />
   {{/each-in}}
 
-  {{#unless isEditing}}
-    <button {{on "click" (action (mut isEditing) (not isEditing))}}>
-      Edit
-    </button>
-  {{else}}
-    <BsButton @type="secondary" @defaultText="Save" @buttonType="submit" />
-    {{!-- <button {{on "click" (action (mut isEditing) (not isEditing))}}>
-      Save
-    </button> --}}
-  {{/unless}}
+  {{#if addingNewProperty}}
+    <form.element @value={{newPropertyKey}} @controlType="text" @onChange={{action (mut newPropertyKey)}} {{on "focusout" (action "focusOutProperty")}} />
+    <form.element @value={{newPropertyValue}} @controlType="text" @onChange={{action (mut newPropertyValue)}} {{on "focusout" (action "focusOutProperty")}} />
+  {{/if}}
+
+  <button {{on "click" (action (mut addingNewProperty))}}>
+    Add property
+  </button>
+
+  <button {{on "click" (action save)}}>
+    Save
+  </button>
+
+  <button {{on "click" (action deleteNode node)}}>
+    Delete
+  </button>
 
 </BsForm>
