--- a/app/templates/components/visualization/frame.hbs
+++ b/app/templates/components/visualization/frame.hbs
@@ -3,14 +3,14 @@
 <div class="row no-gutters">
   <div class="col-8">
 
-    <Visualization::graph @interactive=true @nodes={{this.nodes}} @links={{this.links}} @clickedNode={{action "clickedNode"}} @doubleClickedNode={{action "doubleClickedNode"}} @hoveringOverNode={{action "hoveringOverNode"}} @clickedSVG={{action "clickedSVG"}} bubbles=false />
+    <Visualization::graph @interactive=true @nodes={{this.nodes}} @links={{this.links}} @clickedNode={{action "clickedNode"}} @doubleClickedNode={{action "doubleClickedNode"}} @hoveringOverNode={{action "hoveringOverNode"}} @clickedSVG={{action "clickedSVG"}} @doubleClickedSVG={{action "doubleClickedSVG"}} bubbles=false />
 
     <Node::nodeHover @node={{this.nodeBeingHoveredOver}} />
 
   </div>
   <div class="col-4">
     {{#if currentlySelectedNode}}
-    <Node::Base @node={{currentlySelectedNode}} @saveNode={{action "saveNode"}}/>
+    <Node::Base @node={{currentlySelectedNode}} @saveNode={{action "saveNode"}} @deleteNode={{action "deleteNode"}}/>
     {{/if}}
 
   </div>
